# Pain

./: CMakeLists.txt
resource/: config.cfg
src/: Tile.cpp  Tile.h  main.cpp
